apps/aries/Endpoint.yaml
apiVersion: v1
kind: Endpoints
metadata:
  name: aries
subsets:
  - addresses:
      - ip: 192.168.1.1
    ports:
      - port: 443
