apps/aries/Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: aries
spec:
  ports:
    - protocol: TCP
      port: 443
      targetPort: 443
