apps/aries/Ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: aries
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
spec:
  ingressClassName: internal-nginx
  tls:
    - hosts:
        - aries.nahue.ar
      secretName: aries
  rules:
    - host: aries.nahue.ar
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: aries
                port:
                  number: 443
